# dria-docker

./: .gitignore  Cargo.toml  Makefile  README.md  compose.yaml  redis.conf
dria_hnsw/: Cargo.toml  Dockerfile  Makefile  README.md
dria_hnsw/src/: data.json  lib.rs  main.rs  worker.rs
dria_hnsw/src/db/: conversions.rs  env.rs  mod.rs  redis_client.rs  rocksdb_client.rs
dria_hnsw/src/distance/: metric.rs  metric_aarch.rs  metric_avx.rs  metric_old_aarch.rs  mod.rs  simple.rs
dria_hnsw/src/errors/: errors.rs
dria_hnsw/src/filter/: mod.rs  text_based.rs
dria_hnsw/src/hnsw/: index.rs  mod.rs  scalar.rs  sync_map.rs  utils.rs
dria_hnsw/src/middlewares/: cache.rs
dria_hnsw/src/models/: mod.rs  request_models.rs
dria_hnsw/src/proto/: hnsw_comm.proto  index_buffer.rs  insert.proto  insert_buffer.rs  mod.rs  request.proto  request_buffer.rs
dria_hnsw/src/responses/: mod.rs  responses.rs
hollowdb/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  jest.config.ts  package.json  tsconfig.build.json  tsconfig.json
hollowdb/src/: global.d.ts  index.ts  server.ts
hollowdb/test/: index.test.ts
hollowdb_wait/: Dockerfile  README.md  wait.sh
micro_api/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  package.json
micro_api/src/: index.ts  server.ts
micro_api/test/: index.test.ts
micro_api_wait/: Dockerfile  README.md  wait.sh
src/: lib.rs  worker.rs
src/db/: mod.rs  redis_client.rs
src/distance/: mod.rs
src/errors/: errors.rs
src/hnsw/: mod.rs  utils.rs
src/models/: request_models.rs
(+28 files in other folders)
