[package]
name = "dria_hnsw"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
redis = { version = "0.23.0", features = ["cluster"] }
prost = "0.10.0"
prost-build = "0.10.0"
prost-types = "0.10.0"
prost-derive = "0.10.0"
base64 = "0.13.0"
rand = "0.8.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono="0.4.19"
hashbrown = "0.14.0"
url = "2.4.0"
actix-web = "4.3.1"
reqwest = "0.11.18"
actix-cors = "0.6.4"
tokio = { version = "1", features = ["full"] }
futures-util = "0.3.28"
proc-macro-error = "1.0.4"
derive_more = "0.99.2"
tdigest = "0.2.3"
rayon = "1.7.0"
ahash = "0.8.6"

